Fixed var to env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
   deploy-backend:
     runs-on: self-hosted
 
-    variables:
+    env:
       DEPLOY_PATH: /apps/aennesia/backend
 
     strategy:
